--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,8 @@ jobs:
     # - uses: oleksiyrudenko/gha-git-credentials@v2.1.1
     #   with:
     #     token: '${{ secrets.GH_PAT }}'
-    - run: |
+    - name: Echo
+      run: |
         echo "Hello World"
     # - run: |
     #     git checkout deploy
