--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,8 @@ on:
 
 jobs:
   publish:
+    name: Publish blog content to website
+    runs-on: ubuntu-latest
     steps:
       - name: Echo
         run: |
