--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,17 +11,14 @@ jobs:
     name: Publish blog content to website
     runs-on: ubuntu-latest
     steps:
-      - name: Echo
-        run: |
-          echo "Hello World"
-    # - uses: actions/checkout@v2
-    # - uses: oleksiyrudenko/gha-git-credentials@v2.1.1
-    #   with:
-    #     token: '${{ secrets.GH_PAT }}'
-    # - run: |
-    #     git checkout deploy
-    #     git checkout main posts
-    #     mv posts/* src/content/blog
-    #     git add .
-    #     git commit -m "Updated posts"
-    #     git push
+      - uses: actions/checkout@v2
+      - uses: oleksiyrudenko/gha-git-credentials@v2.1.1
+        with:
+          token: '${{ secrets.GH_PAT }}'
+      - run: |
+          git checkout deploy
+          git checkout main posts
+          mv posts/* src/content/blog
+          git add .
+          git commit -m "Updated posts"
+          git push
