--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,7 @@ jobs:
         with:
           token: '${{ secrets.GH_PAT }}'
       - run: |
+          git fetch deploy
           git checkout deploy
           git checkout main posts
           mv posts/* src/content/blog
