--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,5 +21,6 @@ jobs:
           git checkout main posts
           mv posts/* src/content/blog
           git add .
+          git status
           git commit -m "Updated posts"
           git push
