--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,8 @@ jobs:
       - uses: oleksiyrudenko/gha-git-credentials@v2.1.1
         with:
           token: '${{ secrets.GH_PAT }}'
-        run: |
+      - run: |
+          echo "${{ secrets.GH_PAT }}""
           git fetch origin
           git checkout deploy
           git checkout main posts
