--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,10 @@ on:
   # Using a different branch name? Replace `main` with your branch’s name
   push:
     branches: [ deploy ]
+  workflow_run:
+    workflows: ["Deploy Content"]
+    types:
+      - completed
   # Allows you to run this workflow manually from the Actions tab on GitHub.
   workflow_dispatch:
 
