--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,7 @@ jobs:
     steps:
       - name: Checkout your repository using git
         uses: actions/checkout@v3
+        ref: deploy
       - name: Install, build, and upload your site
         uses: withastro/action@v1
         # with:
