--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,8 @@ jobs:
     steps:
       - name: Checkout your repository using git
         uses: actions/checkout@v3
-        ref: deploy
+        with:
+          ref: deploy
       - name: Install, build, and upload your site
         uses: withastro/action@v1
         # with:
