--- a/.github/workflows/content.yml
+++ b/.github/workflows/content.yml
@@ -16,9 +16,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: oleksiyrudenko/gha-git-credentials@v2.1.1
-        with:
-          token: '${{ secrets.GITHUB_TOKEN }}'
+      # - uses: oleksiyrudenko/gha-git-credentials@v2.1.1
+      #   with:
+      #     token: '${{ secrets.GITHUB_TOKEN }}'
       - run: |
           git fetch origin
           git checkout deploy
